# SilenceInstaller

./: CMakeLists.txt  README.md
src/client/: main.cpp
src/server/: main.cpp
